--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   cloud_firestore: ^4.3.0
   firebase_auth: ^4.2.4
   firebase_database: ^10.0.9
+  ftoast: ^2.0.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
